# parkinsons_telemonitoring

./: README.md  pyproject.toml
data/raw/: parkinsons_test.csv  parkinsons_train.csv
parkinsons_telemonitoring/: parkinsons_predict.ipynb
