[tool.poetry]
name = "parkinsons-telemonitoring"
version = "0.1.0"
description = ""
authors = ["Gareth Smith <garethsmithuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
ucimlrepo = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
